Fixes placeholder overlap on login page

--- a/css/base/uptime-kuma/uptime-kuma-base.css
+++ b/css/base/uptime-kuma/uptime-kuma-base.css
@@ -1,5 +1,39 @@
-@import url("/css/defaults/placeholders.css");
+/* @import url("/css/defaults/placeholders.css"); */
 @import url("/css/defaults/transparent.css");
+  *:not(#floatingInput)::-webkit-input-placeholder {
+    color: var(--text-muted) !important;
+  }
+  
+  *:not(#floatingInput):focus::-webkit-input-placeholder {
+    color: var(--text-hover) !important;
+  }
+  
+  /* Firefox < 19 */
+  *:not(#floatingInput):-moz-placeholder {
+    color: var(--text-muted) !important;
+  }
+  
+  *:not(#floatingInput):focus:-moz-placeholder {
+    color: var(--text-hover) !important;
+  }
+  
+  /* Firefox > 19 */
+  *:not(#floatingInput)::-moz-placeholder {
+    color: var(--text-muted) !important;
+  }
+  
+  *:not(#floatingInput):focus::-moz-placeholder {
+    color: var(--text-hover) !important;
+  }
+  
+  /* Internet Explorer 10 */
+  *:not(#floatingInput):-ms-input-placeholder {
+    color: var(--text-muted) !important;
+  }
+  
+  *:not(#floatingInput):focus:-ms-input-placeholder {
+    color: var(--text-hover) !important;
+  }
 
 body,
 .dark {
